Refatoração para separar os controllers de passage e de theme

--- a/HolyStudy.csproj
+++ b/HolyStudy.csproj
@@ -19,4 +19,8 @@
     <_ContentIncludedByDefault Remove="Views\Home\Privacy.cshtml" />
   </ItemGroup>
 
+  <ItemGroup>
+    <AdditionalFiles Include="Views\Passages\EditPassage.cshtml" />
+  </ItemGroup>
+
 </Project>
