--- a/HolyStudy.csproj
+++ b/HolyStudy.csproj
@@ -20,6 +20,11 @@
   <ItemGroup>
     <_ContentIncludedByDefault Remove="Views\Home\Index.cshtml" />
     <_ContentIncludedByDefault Remove="Views\Home\Privacy.cshtml" />
+    <_ContentIncludedByDefault Remove="publish\web.config" />
+    <_ContentIncludedByDefault Remove="publish\appsettings.Development.json" />
+    <_ContentIncludedByDefault Remove="publish\appsettings.json" />
+    <_ContentIncludedByDefault Remove="publish\HolyStudy.deps.json" />
+    <_ContentIncludedByDefault Remove="publish\HolyStudy.runtimeconfig.json" />
   </ItemGroup>
 
   <ItemGroup>
